Modify body margin to fix gap issue

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     /*background-image: url("images/background.png");*/
     background-color: rgb(246, 246, 246);
     /*background-repeat: repeat-x;*/
+    margin: -8px;
 }
 
 h1,
